clang/test/BSC/Negative/Trait/r1/definition_9/definition_9.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int a; // expected-error {{only function declarations can be trait member}}
};

int main() {
  int a = 1;
  return 0;
}
